k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service # Frontend (Nginx) buraya istek atacak
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2 # Yüksek Erişilebilirlik (2 tane çalışacak)
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: saitbutun/tech-arena-backend:v1 # Veya :v1 (etiketine dikkat et)
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 8000
