k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP # Dış dünyadan IP alması için
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        # DİKKAT: Burası v1 (Mavi) olsun ki demoda v2'ye (Yeşil) geçişi gösterelim.
        image: saitbutun/tech-arena-frontend:v2 
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
