k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service # Backend bu isme bağlanacak!
spec:
  ports:
  - port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine # <-- Bak, resmi imajı direkt çekiyoruz
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 6379
