k8s/canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-destination
spec:
  host: frontend-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway # gateway.yaml dosyasında verdiğimiz isimle aynı olmalı
  http:
  - route:
    - destination:
        host: frontend-service
        subset: v1
      weight: 70
    - destination:
        host: frontend-service
        subset: v2
      weight: 30
